# ezgb

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  coronaboy.code-workspace  readme.md
.github/workflows/: cmake-multi-platform.yml
data/: opcodes_2.json
scripts/: generate_instructions.py
src/: APU.cpp  APU.h  AppState.h  Audio.h  Base.cpp  Base.h  Bootrom.h  CMakeLists.txt  Cart.cpp  Cart.h  EmuGui.cpp  EmuGui.h  Emulator.cpp  Emulator.h  Gui.cpp  Gui.h  GuiWindow.cpp  GuiWindow.h  IO.cpp  IO.h  MiscOps.h  OpCodes.h  Oscillators.cpp  Oscillators.h  PPU.cpp  PPU.h  Platform.h  Runner.cpp  Runner.h  Test.cpp  Test.h  Texture.cpp  Texture.h  ThirdParty_ImGui.cpp  ThirdParty_SDL.h  Window.cpp  Window.h  base.cpp  base.h  main.cpp  (+1 more)
